--- a/nginx.conf
+++ b/nginx.conf
@@ -6,8 +6,12 @@ http {
     server {
         listen 80;
 
-        location / {
-            proxy_pass http://app1:5000;
+        location /qna {
+            proxy_pass http://35.226.141.50:5000;
+        }
+
+        location /ltm {
+            proxy_pass http://35.193.222.33:5000;
         }
     }
     
