Updated for marco model

--- a/nginx.conf
+++ b/nginx.conf
@@ -13,6 +13,14 @@ http {
         location /ltm {
             proxy_pass http://35.193.222.33:5000;
         }
+
+        location /empathy {
+            proxy_pass http://35.202.171.41:5000;
+        }
+
+        location /marco {
+            proxy_pass http://35.202.171.41:5000;
+        }
     }
     
 }
