--- a/nginx.conf
+++ b/nginx.conf
@@ -7,19 +7,35 @@ http {
         listen 80;
 
         location /qna {
-            proxy_pass http://35.226.141.50:5000;
+            proxy_pass http://35.226.141.50:5000/qna;
+        }
+
+        location /qna/generate {
+            proxy_pass http://35.226.141.50:5000/generate`;
         }
 
         location /ltm {
-            proxy_pass http://35.193.222.33:5000;
+            proxy_pass http://35.193.222.33:5000/ltm;
+        }
+
+        location /ltm/generate {
+            proxy_pass http://35.193.222.33:5000/generate;
         }
 
         location /empathy {
-            proxy_pass http://35.202.171.41:5000;
+            proxy_pass http://35.202.171.41:5000/empathy;
+        }
+
+        location /empathy/generate {
+            proxy_pass http://35.202.171.41:5000/generate;
         }
 
         location /marco {
-            proxy_pass http://35.224.68.97:5000;
+            proxy_pass http://35.224.68.97:5000/marco;
+        }
+
+        location /marco/generate {
+            proxy_pass http://35.224.68.97:5000/generate;
         }
     }
     
