Updated for all models

--- a/nginx.conf
+++ b/nginx.conf
@@ -7,35 +7,19 @@ http {
         listen 80;
 
         location /qna {
-            proxy_pass http://35.226.141.50:5000/qna;
-        }
-
-        location /qna/generate {
-            proxy_pass http://35.226.141.50:5000/generate`;
+            proxy_pass http://35.226.141.50:5000;
         }
 
         location /ltm {
-            proxy_pass http://35.193.222.33:5000/ltm;
-        }
-
-        location /ltm/generate {
-            proxy_pass http://35.193.222.33:5000/generate;
+            proxy_pass http://35.193.222.33:5000;
         }
 
         location /empathy {
-            proxy_pass http://35.202.171.41:5000/empathy;
-        }
-
-        location /empathy/generate {
-            proxy_pass http://35.202.171.41:5000/generate;
+            proxy_pass http://35.202.171.41:5000;
         }
 
         location /marco {
-            proxy_pass http://35.224.68.97:5000/marco;
-        }
-
-        location /marco/generate {
-            proxy_pass http://35.224.68.97:5000/generate;
+            proxy_pass http://35.224.68.97:5000;
         }
     }
     
