--- a/nginx.conf
+++ b/nginx.conf
@@ -6,20 +6,28 @@ http {
     server {
         listen 80;
 
-        location /qna {
-            proxy_pass http://35.226.141.50:5000;
+        location /empathy {
+            proxy_pass http://0.0.0.0:5000;
+        }
+
+        location /iag {
+            proxy_pass http://0.0.0.0:5000;
+        }
+
+        location /lfqa {
+            proxy_pass http://0.0.0.0:5000;
         }
 
         location /ltm {
-            proxy_pass http://35.193.222.33:5000;
-        }
-
-        location /empathy {
-            proxy_pass http://35.202.171.41:5000;
+            proxy_pass http://0.0.0.0:5000;
         }
 
         location /marco {
-            proxy_pass http://35.224.68.97:5000;
+            proxy_pass http://0.0.0.0:5000;
+        }
+
+        location /qna {
+            proxy_pass http://0.0.0.0:5000;
         }
     }
     
