--- a/nginx.conf
+++ b/nginx.conf
@@ -6,28 +6,32 @@ http {
     server {
         listen 80;
 
-        location /empathy {
-            proxy_pass http://0.0.0.0:5000;
-        }
+        # location /empathy {
+        #     proxy_pass http://0.0.0.0:5000;
+        # }
 
-        location /iag {
-            proxy_pass http://0.0.0.0:5000;
-        }
+        # location /iag {
+        #     proxy_pass http://0.0.0.0:5000;
+        # }
 
         location /lfqa {
-            proxy_pass http://0.0.0.0:5000;
+            proxy_pass http://34.67.140.42:5000;
         }
 
-        location /ltm {
-            proxy_pass http://0.0.0.0:5000;
-        }
+        # location /ltm {
+        #     proxy_pass http://0.0.0.0:5000;
+        # }
 
-        location /marco {
-            proxy_pass http://0.0.0.0:5000;
-        }
+        # location /marco {
+        #     proxy_pass http://0.0.0.0:5000;
+        # }
 
-        location /qna {
-            proxy_pass http://0.0.0.0:5000;
+        # location /qna {
+        #     proxy_pass http://0.0.0.0:5000;
+        # }
+
+        location /wow {
+            proxy_pass http://34.67.5.24:5000;
         }
     }
     
