--- a/nginx.conf
+++ b/nginx.conf
@@ -34,5 +34,38 @@ http {
             proxy_pass http://34.67.5.24:5000;
         }
     }
-    
+}
+
+https {
+    server {
+        listen 443;
+
+        location /empathy {
+            proxy_pass http://34.67.246.218:5000;
+        }
+
+        location /iag {
+            proxy_pass http://34.136.49.191:5000;
+        }
+
+        location /lfqa {
+            proxy_pass http://34.67.140.42:5000;
+        }
+
+        location /ltm {
+            proxy_pass http://34.123.216.233:5000;
+        }
+
+        location /marco {
+            proxy_pass http://34.122.80.63:5000;
+        }
+
+        location /qna {
+            proxy_pass http://34.67.109.229:5000;
+        }
+
+        location /wow {
+            proxy_pass http://34.67.5.24:5000;
+        }
+    }
 }
